--- a/frontend/src/pages/DemandSlip/DemandSlip.css
+++ b/frontend/src/pages/DemandSlip/DemandSlip.css
@@ -115,6 +115,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+
+    border: 1px solid blue;
 } 
 
 .ds-col-prod-list{
